<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ounceGram">

    <Button
        android:id="@+id/buttonOunce"
        android:layout_width="259dp"
        android:layout_height="60dp"
        android:layout_marginBottom="84dp"
        android:text="@string/convert_ounce_to_gram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonKG"
        app:layout_constraintVertical_bias="0.32"
        tools:ignore="UnknownIdInLayout" />

    <EditText
        android:id="@+id/editInput1"
        android:layout_width="306dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/grams"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editInput2"
        android:layout_width="306dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/ounce"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editInput1"
        app:layout_constraintVertical_bias="0.151"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonGram"
        android:layout_width="259dp"
        android:layout_height="60dp"
        android:text="@string/convert_gram_to_ounce"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editInput2"
        app:layout_constraintVertical_bias="0.271" />

</android.support.constraint.ConstraintLayout>